2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Better stability for mirrored slabs.
	* slab.h: Ditto.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2004-03-04 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Lambda can now be complex.
	* slabdisp.h: Ditto.
	* slabdisp.cpp: Ditto.
	* slaboverlap.cpp: Ditto.

2003-12-08 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slaboverlap.h: Add overlap with plane wave.
	* slaboverlap.cpp: Ditto.

2003-11-17 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Introduce material_at.

2003-11-03 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slaboverlap.cpp: Relax tolerance.

2003-10-29 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slaboverlap.cpp: Improve detection of normalisation integrals.

2003-08-07 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Throw away bogus estimates.

2003-08-06 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Support for TE_TM in new field calc.

2003-08-01 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Add field_calc_heuristic.

2003-07-11 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.h: Better calculation of mode profiles.
	* slab.cpp: Ditto.
	* slabmode.h: Ditto.
	* slabmode.cpp: Ditto.

2003-05-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Even better estimation of max kz.

2003-05-16 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Better estimation of max kz.

2003-05-16 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Better elimination of bogus estimates.

2003-05-16 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Speed up.

2003-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Reduce zero threshold.

2003-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Fix memory management bug.

2003-04-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Better TM estimate.
	* slab.cpp: Ditto.
